# fishjelly

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  ARCHITECTURE.md  ASIO_MIGRATION_STATUS.md  AUTHORS  BENCHMARK_REPORT.md  CLAUDE.md  Doxyfile  HTTP11_COMPLIANCE_ANALYSIS.md  HTTP11_COMPLIANCE_STATUS.md  HTTP2_IMPLEMENTATION_ANALYSIS.md  Makefile  Makefile.am  Makefile.in  README.md  ROADMAP.md  benchmark_results.json  config.h.in  configure.ac  filter.cc  http.cc  index.html  log.cc  meson.build  meson_options.txt  message.cc  middleware_example.md  pyproject.toml  run_clang_tidy.sh  run_tests.sh  simple_test.py  socket.cc  test_cookies.sh  test_host_header.sh  test_http11_compliance.py  test_http_versions.sh  test_keepalive_timeout.sh  test_middleware_simple.sh  (+6 more)
.beads/: .gitignore  issues.jsonl
.claude/: settings.local.json
autom4te.cache/: output.0  requests  traces.0
base/: mime.types
base/htdocs/: index.html
benchmark/: benchmark.py  compare_versions.sh  quick_version_compare.sh  simple_benchmark.py  wrk_benchmark.sh
docs/: ROADMAP.md
fuzz/: README.md  afl_http_server.cc  build_fuzzers.sh  fuzz_http_parser.cc  fuzz_middleware.cc  fuzz_network.cc  http.dict  property_test.cc  run_basic_fuzz.sh
fuzz/corpus/: edge_cases.txt  http_methods.txt  malformed_headers.txt  path_traversal.txt  valid_get.txt  valid_post.txt
scripts/: README.md  generate-ssl-cert.sh
scripts/testing/: test_hpack_limits.py  test_http11_compliance.py  test_http11_compliance_fixed.py  test_if_modified_since.sh  test_keepalive_issue.sh  test_middleware.sh  test_options.sh  test_password_security.py  test_path_traversal.py  test_post_411.sh  test_range_requests.py  test_rapid_reset.py  test_rate_limit.sh  test_real_keepalive.py  test_request_size_limits.py  test_request_smuggling.py  test_slowloris.py  test_status_codes.py  test_websocket.py
src/: Makefile.am  asio_http_connection.cc  asio_http_connection.h  asio_server.cc  asio_server.h  asio_socket_adapter.cc  asio_socket_adapter.h  asio_ssl_server.cc  asio_ssl_server.h  auth.cc  auth.h  cgi.cc  cgi.h  compression_middleware.cc  compression_middleware.h  connection_timeouts.h  content_negotiator.cc  content_negotiator.h  filter.cc  filter.h  fishjelly.1  footer_middleware.cc  footer_middleware.h  global.h  http.cc  http.h  http2_server.cc  http2_server.h  http_output_interface.h  log.cc  log.h  logging_middleware.cc  logging_middleware.h  meson.build  middleware.h  middleware_demo.cc  mime.cc  mime.h  rate_limit_demo.cc  request_limits.h  (+13 more)
src/fishjelly.xcodeproj/: mmichie.mode1  mmichie.pbxuser  project.pbxproj
tests/: meson.build  test_content_negotiator.cc  test_filter.cc  test_http.cc  test_mime.cc  test_path_sanitization.cc  test_socket.cc  test_token.cc
